GEMTools/gt_input_file.h

/*
 * File formats
 */
typedef enum { FASTA, FASTQ, MAP, UNKNOWN } gt_file_format;
typedef struct {
  bool contains_qualities;
  char separator;
  uint64_t num_blocks_template;
  gt_map_version format_version;
} gt_map_file_format;
// FASTQ/FASTA specific info
typedef struct {/*TODO*/} gt_fast_file_format;
/* */

// GT Input file
typedef enum { STREAM, REGULAR_FILE, MAPPED_FILE } gt_file_type;
typedef struct {
  /* Input file */
  char* file_name;
  gt_file_type file_type;
  FILE* file;
  int fildes;
  bool eof;
  uint64_t file_size;
  /* File format */
  gt_file_format file_format;
  union {
    gt_map_file_format map_type;
    gt_fast_file_format fast_type;
  };
  pthread_mutex_t input_mutex;
  /* Auxiliary Buffer (for synch purposes) */
  uint8_t* file_buffer;
  uint64_t buffer_size;
  uint64_t buffer_begin;
  uint64_t buffer_pos;
  uint64_t global_pos;
  uint64_t processed_lines;
  /* ID generator */
  uint64_t processed_id;
} gt_input_file;
/*
 * Basic I/O functions
 */
gt_input_file* gt_input_stream_open(FILE* stream);
gt_input_file* gt_input_file_open(char* const file_name,const bool mmap_file);
gt_status gt_input_file_close(gt_input_file* const input_file);
/*
 * Format detection
 */
gt_file_format gt_input_file_detect_file_format(gt_input_file* const input_file);